--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <head>
      <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
       <title>Soccer player finder</title>
       <!-- This is the link to join the main page with the CSS page to give it style -->
       <link rel="stylesheet" href="./style.css" />
@@ -15,16 +17,28 @@
 
 
 </head>
-<!-- In this section it is located the navbar with the logo and navigation options-->
-<div class="Navbar">
-  <div id="Logo">
-    <a href="./index.html"><img src="./Logo.png" alt="Logo of the page with a football, soccer ball, basketball, baseball and a tennis ball" /></a>
+<!-- In this section it is located the navbar with the logo and navigation options, the framework was took from getbootstrap.com-->
+<nav class="navbar navbar-expand-lg">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#"><img src="./Logo.png" class="w-70"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="./index.html" alt="Logo of the page with a football, soccer ball, basketball, baseball and a tennis ball"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact Info</a>
+        </li>
+      </ul>
+    </div>
   </div>
-    <ul>
-      <li><a href="./index.html">Home</a></li>
-      <li><a href="./contact.html">Contact info</a></li>
-    </ul>
-</div>
+</nav>
 
   <body>
 
@@ -40,9 +54,15 @@
       <div class="Box">
         <label class="pe-2 fw-bold text-secondary"></label>
         <input id="searchBox" class="form-control" type="text" value="" />
-        <button id="searchButton">Search</button>
+      </div>
+
+        <div id="searchButton">
+        <button >Search</button>
         <p id="error"></p>
-      </div> 
+          
+        </div >
+        
+
 
       <!-- In this section is displayed the information according to the value selected by the user in the search box -->
      <p class="secondarytitles">Name of player:</p>
@@ -76,7 +96,9 @@
     <footer id="footer">
       <h4>My Website &copy; 2024</h4>
     </footer>
-
+    <script
+      src=https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js
+    ></script>
 
   </body>
 </html>
