These updated improve some css code to a better style

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <input id="searchBox" class="form-control" type="text" value="" />
       </div>
 
-        <div class="Button">
-        <button >Search</button>
+        <div id="searchButton" class="text-center">
+        <button class="btn" >Search</button>
         <p id="error"></p>
 
         </div >
@@ -76,11 +76,11 @@
       <p class="secondarytitles">Description:</p>
       <p id="Description"></p>
       <p class="secondarytitles">Image:</p>
-      <img src="#" id="Image"></img>
+      <img src="#" id="Image" class="img-fluid m-2"></img>
       <p class="secondarytitles">Position:</p>
       <p id="Position"></p>
       <div class ="field"> 
-        <img src="./SoccerField.png" alt="Image of a soccer field where the position where the player perform is showed">
+        <img src="./SoccerField.png" class="img-fluid m-2" alt="Image of a soccer field where the position where the player perform is showed">
         <span class="player"></span>
       </div>
 
