--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Contact info</title>
 
           <!-- This is the link to join the main page with the CSS page to give it style -->
@@ -16,29 +17,42 @@
       rel="stylesheet"
     />
   </head>
- <!-- In this section it is located the navbar with the logo and navigation options-->
-  <div class="Navbar">
-    <div id="Logo">
-        <a href="./index.html"><img src="./Logo.png" alt="Logo of the page with a football, soccer ball, basketball, baseball and a tennis ball" /></a>
-      </div>
-    <ul>
-      <li><a href="./index.html">Home</a></li>
-      <li><a href="./contact.html">Contact info</a></li>
-    </ul>
-  </div>
+
 <body>
-  <hero>
+   <!-- In this section it is located the navbar with the logo and navigation options-->
+ <nav class="navbar navbar-expand-lg">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#"><img src="./Logo.png" class="w-70"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="./index.html" alt="Logo of the page with a football, soccer ball, basketball, baseball and a tennis ball"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact Info</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+  <div class="text-center">
 
     <!-- In this section we can find an image of a heart created with sport figures -->
     <h2 class="MainTitle">All kinds of sports is one of my biggest passions</h2>
-    <img class="PassionImage" src="./SportsPassion.png" alt="Image of a heart formed with figures performing sports " />
-  </hero>
+    <img class="img-fluid m-1" width="60%" padding-top="20px" src="./SportsPassion.png" alt="Image of a heart formed with figures performing sports " />
+  </div>
 
   <!-- This is a form where user can register in the page -->
 
   <section id="contact-form">
     <div>
-      <p>Please fill out the form below to <strong>share this passion</strong></p>
+      <p class="secondarytitles1">Please fill out the form below to <strong>share this passion</strong></p>
       <form>
         <div>
           <label class="FormTitles" for="name">Name</label>
@@ -87,11 +101,15 @@
     </div>
   </section>
 </body>
+<footer id="footer">
+  <h4>My Website &copy; 2024</h4>
+</footer>
+<script
+src=https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js
+></script>
 
 <!-- This is the footer of both pages with the copyright session -->
-  <footer id="footer">
-    <h4>My Website &copy; 2024</h4>
-  </footer>
+
 
 </html>
 </html>
