Final settings to make the website responsive

--- a/contact.html
+++ b/contact.html
@@ -48,11 +48,16 @@
     <img class="img-fluid m-1" width="60%" padding-top="20px" src="./SportsPassion.png" alt="Image of a heart formed with figures performing sports " />
   </div>
 
+  <div class="secondarytitles">
+    <p >Please fill out the form below to <strong>share this passion</strong></p>
+  </div>
+
   <!-- This is a form where user can register in the page -->
 
-  <section id="contact-form">
-    <div>
-      <p class="secondarytitles1">Please fill out the form below to <strong>share this passion</strong></p>
+  <section id="contact-form" class="form-fluid m-2">
+    
+
+
       <form>
         <div>
           <label class="FormTitles" for="name">Name</label>
@@ -78,7 +83,7 @@
 
   <section class="DatesOfContact">
     <div class="box">
-      <p>Phone Number</p>
+      <p>Mobile</p>
       <img src="./phone.png" alt="Image of a phone" />
       <p>3157274796</p>
     </div>
