--- a/contact.html
+++ b/contact.html
@@ -45,11 +45,11 @@
 
     <!-- In this section we can find an image of a heart created with sport figures -->
     <h2 class="MainTitle">All kinds of sports is one of my biggest passions</h2>
-    <img class="img-fluid m-1" width="60%" padding-top="20px" src="./SportsPassion.png" alt="Image of a heart formed with figures performing sports " />
+    <img class="img-fluid m-1" width="60%" padding-top="20px" src="./SportsPassion.png" alt="Image of a heart formed with figures performing sports" />
   </div>
 
   <div class="secondarytitles">
-    <p >Please fill out the form below to <strong>share this passion</strong></p>
+    <p>Please fill out the form below to <strong>share this passion</strong></p>
   </div>
 
   <!-- This is a form where user can register in the page -->
@@ -66,7 +66,7 @@
 
         <div class="form-group">
           <label class="FormTitles" for="email">Mobile Number</label>
-          <input clas="input" type="text" name="Mobile" id="Mobile" />
+          <input class="input" type="text" name="Mobile" id="Mobile" />
         </div>
 
         <div class="form-group">
