--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
 
     <!-- In this section we find the instructions to find the info the user can find -->
     <div class="container">
-      <h1 class="MainTitle">
-        <your class="secondarytitles">Find here <strong>your favorite soccer player</strong>
+      <h1 class="MainTitle">Find here <strong>your favorite soccer player</strong>
       </h1>
       <p class="Box">Write his name ⚽️🏃🏽</p>
     
@@ -60,7 +59,7 @@
         <button class="btn" >Search</button>
         <p id="error"></p>
 
-        </div >
+        </div>
         
 
 
